force-app/main/default/objects/Note_de_frais__c/fields/Date_de_l_intervention__c.field-meta.xml
<CustomField>
    <fullName>Date_de_l_intervention__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de l&apos;intervention</label>
    <type>Date</type>
</CustomField>