force-app/main/default/objects/Note_de_frais__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>