force-app/main/default/objects/Note_de_frais__c/fields/Id_Foyer__c.field-meta.xml
<CustomField>
    <fullName>Id_Foyer__c</fullName>
    <formula>Intervention__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N° du foyer</label>
    <type>Text</type>
</CustomField>