force-app/main/default/objects/Note_de_frais__c/fields/Km__c.field-meta.xml
<CustomField>
    <fullName>Km__c</fullName>
    <label>Km</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>