force-app/main/default/objects/Note_de_frais__c/fields/Montant__c.field-meta.xml
<CustomField>
    <fullName>Montant__c</fullName>
    <label>Montant</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>