force-app/main/default/objects/Note_de_frais__c/fields/Ressource_de_service__c.field-meta.xml
<CustomField>
    <fullName>Ressource_de_service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ressource de service</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Notes de frais</relationshipLabel>
    <relationshipName>Notes_de_frais</relationshipName>
    <type>Lookup</type>
</CustomField>