force-app/main/default/objects/Note_de_frais__c/fields/Sous_type_d_intervention__c.field-meta.xml
<CustomField>
    <fullName>Sous_type_d_intervention__c</fullName>
    <formula>CASE(TEXT( Intervention__r.Sous_type_d_intervention__c ),
  &quot;1&quot;, &quot;Nouveau foyer&quot;,
  &quot;3&quot;, &quot;Suppression d&apos;un poste&quot;,
  &quot;4&quot;, &quot;Changement&quot;,
  &quot;5&quot;, &quot;Contrôle de l&apos;installation&quot;,
  &quot;6&quot;, &quot;Déménagement&quot;,
  &quot;7&quot;, &quot;Réinstallation&quot;,
  &quot;8&quot;, &quot;Définitive&quot;,
  &quot;14&quot;, &quot;Routeur ne s&apos;allume plus&quot;,
  &quot;13&quot;, &quot;Pb Sonde Tv (Déclaration)&quot;,
  &quot;12&quot;, &quot;Contrôle de connexion&quot;,
  &quot;16&quot;, &quot;Contrôle audience&quot;,
  &quot;18&quot;, &quot;Recensement&quot;,
  &quot;19&quot;, &quot;Mutation Audimètre&quot;,
  &quot;21&quot;, &quot;Ajout Equipement&quot;,
  &quot;22&quot;, &quot;Visite de courtoisie&quot;,
  &quot;23&quot;, &quot;Passage Improviste&quot;,
		&quot;24&quot;,&quot;Contrôle qualité&quot;, 
		&quot;25&quot;,&quot;Auto désinstallation&quot;, 
		&quot;26&quot;,&quot;Configuration Routeur (Pame)&quot;,		
		&quot;27&quot;,&quot;	Paramétrage Meters 2 à 4&quot;,
		&quot;28&quot;,&quot;Paramétrage Meters 5 à 8&quot;,
		&quot;29&quot;,&quot;	Configuration Meters (si boite mail ok)&quot;,
		&quot;30&quot;,&quot;Configuration routeur (connexion des equipements au routeur Mediametrie )&quot;,
  &quot;Inconnue&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actions</label>
    <type>Text</type>
</CustomField>