force-app/main/default/objects/Note_de_frais__c/fields/Temps_passe__c.field-meta.xml
<CustomField>
    <fullName>Temps_passe__c</fullName>
    <label>Temps passé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>