force-app/main/default/objects/Note_de_frais__c/fields/Type_d_intervention__c.field-meta.xml
<CustomField>
    <fullName>Type_d_intervention__c</fullName>
    <formula>CASE(TEXT( Intervention__r.Type_de_l_intervention__c),
  &quot;1&quot;, &quot;Installation&quot;,
  &quot;2&quot;, &quot;Désinstallation&quot;,
  &quot;3&quot;, &quot;Dépannage/Support&quot;,
  &quot;Inconnue&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type d&apos;intervention</label>
    <type>Text</type>
</CustomField>