force-app/main/default/objects/Note_de_frais__c/fields/Type_de_frais__c.field-meta.xml
<CustomField>
    <fullName>Type_de_frais__c</fullName>
    <label>Type de frais</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Péage</fullName>
            </value>
            <value>
                <fullName>Km</fullName>
            </value>
            <value>
                <fullName>Restauration</fullName>
            </value>
            <value>
                <fullName>Divers</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>