force-app/main/default/objects/Note_de_frais__c/validationRules/RV01_KM_obligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>RV01_KM_obligatoire</fullName>
    <active>true</active>
    <description>Si le Type de frais correspond à KM, alors la saisie du KM est obligatoire : RV01_KM_obligatoire</description>
    <errorConditionFormula>AND(
ISPICKVAL( Type_de_frais__c , &apos;KM&apos;),
ISBLANK(Km__c)
)</errorConditionFormula>
    <errorDisplayField>Km__c</errorDisplayField>
    <errorMessage>Veuillez saisir le champ Km</errorMessage>
</ValidationRule>