force-app/main/default/objects/Note_de_frais__c/validationRules/RV02_Montant_obligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>RV02_Montant_obligatoire</fullName>
    <active>true</active>
    <description>RV02_Montant_obligatoire =&gt; Type= Péage OU Hôtel Ou Restauration</description>
    <errorConditionFormula>AND(
OR(
(ISPICKVAL( Type_de_frais__c , &apos;Hotel&apos;)),
(ISPICKVAL( Type_de_frais__c , &apos;Péage&apos;)),
(ISPICKVAL( Type_de_frais__c , &apos;Restauration&apos;))
),
(ISBLANK( Montant__c ))
)</errorConditionFormula>
    <errorDisplayField>Montant__c</errorDisplayField>
    <errorMessage>Veuillez saisir le champ montant</errorMessage>
</ValidationRule>