force-app/main/default/objects/Note_de_frais__c/validationRules/RV03_Divers.validationRule-meta.xml
<ValidationRule>
    <fullName>RV03_Divers</fullName>
    <active>true</active>
    <description>Si le type de frais correspond à Divers alors ajouter une description obligatoirement
Ajouter la règle de gestion : RV03_Divers</description>
    <errorConditionFormula>AND(
ISPICKVAL( Type_de_frais__c , &apos;Divers&apos;),
ISBLANK( Description__c )
)</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>Veuillez saisir le champ Description</errorMessage>
</ValidationRule>