force-app/main/default/objects/Note_de_frais__c/listViews/Toutes_les_Notes_de_frais.listView-meta.xml
<ListView>
    <fullName>Toutes_les_Notes_de_frais</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les Notes de frais</label>
</ListView>